tumblr/tumblr-general.css
/* TUMBLR CUSTOM START */

.outer-div #posts, .outer-div .content {
  z-index: 0;
}

.social-link {
  margin-right: 0.25rem;
}

.tmblr-iframe--unified-controls {
  position: absolute !important;
}

.secondary-social-container .social-link .blog-title {
  left: 50%;
  transform: translateX(-50%);
  top: 50%;
  font-size: 0.5rem;
}

.social-link .blog-title {
  font-size: 0.5rem;
  letter-spacing: -1px;
  line-height: 0;
  position: absolute;
  left: 0.125rem;
  text-align: center;
  top: 1.15rem;
  color: #292929;
  font-weight: bold;
  margin: 0;
}

/* GENERAL START */

html {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

body {
  height: 100%;
  overflow-x: hidden;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  -webkit-font-smoothing: auto;
  position: relative;
}

body, html {
  background-image: url("https://makeGamesMagazine.com/handmadepaper.png");
}

.fs-05 {
  font-size: 0.8rem;
  opacity: 0.8;
}

.fs-2 {
  font-size: 1.5rem;
}

.lh-3 {
  line-height: 3rem;
}

.outer-div {
  background-image: url("https://makeGamesMagazine.com/handmadepaper.png");
}

/* HEADER START */

#big-header {
  background-color: #292929;
  height: 70vh;
  padding: 0 3vh;
  margin: 0;
}

.header-background-darken {
  position: absolute;
  top: -3vh;
  right: -3vh;
  bottom: -3vh;
  left: -3vh;
  background-color: rgba(0,0,0,0.125);
  z-index: 1;
}

.header-image {
  height: calc(100% - 2vh);
  margin: 1vh auto;
  display: block;
  opacity: 1;

  background-image: url("https://makeGamesMagazine.com/headerImage6.png");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;

  position: relative;
  z-index: 2;
}

.header-background-image {
  position: absolute;
  z-index: 0;
  top: -3vh;
  right: -3vh;
  bottom: -3vh;
  left: -3vh;
  background-image: url("https://makeGamesMagazine.com/starrySky-FromFreeStockPhotosPexels.jpeg");
  /*background-image: url("https://images.pexels.com/photos/958362/pexels-photo-958362.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");*/
  /*background-image: url('https://i.pinimg.com/originals/41/eb/0c/41eb0caf960150d83cb08059f4cadf2a.jpg');*/
  /*background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Brazilian_amazon_rainforest.jpg/1200px-Brazilian_amazon_rainforest.jpg');*/
  background-position: center;
  background-size: cover;
}

/* NAV BAR START */

#sticky-nav {
  background-color: #292929;
  padding: 0rem 3rem;
  position: relative;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  z-index: 1;
  margin: 0px;
}

#sticky-nav .container {
  display: block;
}

.mce_inline_error {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: 100%;
  background-color: #292929;
  color: red;
}

/* Horrible !importants to override mailchimp quickly */
.email-signup-container {
  padding: 0 !important;
  margin: 0 !important;
  text-align: center !important;
}

.email-explain {
  white-space: nowrap;
  text-align: right !important;
  line-height: 3rem !important;
  padding: 0px !important;
  color: white !important;
}

.email-signup {
  margin: 0.5rem 0 !important;
  width: calc(100% - 110px) !important;
  border: none !important;
  padding: 3px 5px 3px 5px !important;
  height: 2rem !important;
  text-align: center !important;
  display: inline !important;

  position: static !important; 
  transform: none !important;  
  background-color: white !important; 
  color: black !important; 
}

#mce-responses {
  margin-top: -1px;
}

#mce-responses .response {
  font-size: 0.9rem;
  margin: 0 0 0.5rem 0;
}

#mce-success-response {
  color: lightgreen;
}

#mce-error-response {
  color: #ff9b9b;
}

/* target ios specifically to force font size to be 16 to not have zoom in occur*/
@supports (-webkit-overflow-scrolling: touch) {
  .email-signup:focus {
    font-size: 16px;
  }
  .email-signup:focus::placeholder { 
    font-size: 12px !important;
    opacity: 1;
  }
}

/* Horrible !importants to override mailchimp quickly */
.mc-field-group {
  width: 100% !important;
  padding: 0 !important;
  min-height: initial !important;
}

/* Horrible !importants to override mailchimp quickly */
.email-confirm {
  margin-top: 0.5rem !important;
  width: 100px !important;
  display: block !important;
  float: right !important;
  margin: 0.5rem 0 !important;
  display: inline !important;

  height: 2rem !important;
  line-height: 1rem !important;
  font-weight: bold !important;
  color: white !important;

  border: none !important;

  background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
  background-size: 1500% 1500%;

  transition: 0.1s font-size, 0.1s line-height;

  -webkit-animation: rainbow 16s ease infinite;
  -z-animation: rainbow 16s ease infinite;
  -o-animation: rainbow 16s ease infinite;
    animation: rainbow 16s ease infinite;
}

.email-confirm.btn:not(:disabled):active {
  background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
  background-size: 1500% 1500%;
  font-size: 1.125rem;
  line-height: 1.25rem;
}

@-webkit-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@-moz-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@-o-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@keyframes rainbow { 
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}

.social-container {
  padding: 0 !important;
}

.social-link {
  font-size: 2rem;
  color: white;
  text-decoration: none;
  position: relative;
}

.social-link:hover {
  text-decoration: none;
}

.social-link i {
  line-height: 2.43rem;
}

.social-link .blog-title {
  font-size: 0.5rem;
  letter-spacing: -1px;
  line-height: 0;
  position: absolute;
  left: 0.125rem;
  text-align: center;
  top: 1.15rem;
  color: #292929;
  font-weight: bold;
  margin: 0;
}

.secondary-social-container {
  background-color: #292929;
}

.secondary-social-container .social-link {
  font-size: 2rem;
}

.secondary-social-container .social-link .blog-title {
  left: 50%;
  transform: translateX(-50%);
  top: 50%;
  font-size: 0.5rem;
}

@media (max-width: 992px) {
  #sticky-nav {
    font-size: 0.85rem;
  } 

  #sticky-nav .container {
    max-width: 100%;
  }

  .social-link {
    font-size: 1.5rem;
  }

  .social-link i {
    line-height: 3rem;
  }

  .social-link .blog-title {
    font-size: 7px;
    top: 0.85rem;
    font-weight: bold;
  }
}

@media (max-width: 758px) {
  #sticky-nav {
    padding: 0 0.5rem;
    font-size: 0.725rem;
  } 
}

@media (max-width: 575px) {
  /* Horrible !importants to override mailchimp quickly */
  .email-explain {
    text-align: center !important;
    line-height: 1rem !important;
    padding: 0px !important;
    color: white !important;
    margin-right: 100px !important;
    margin-top: 0.5rem !important;
  }
}

/* CONTENT START */

#content {
  outline: 3rem solid transparent;
}

#description {
  margin: 2rem 2rem 2rem 2rem;
  text-align: center;
  line-height: 1.5rem;
  font-size: 1.125rem;
}

.mag-explanation {
  margin: 0 2rem 3rem 2rem;
  text-align: center;
}

.mag-explanation.submissions {
  /*text-align: left;*/
}

@media (max-width: 575px) {
  #description {
    margin: 1rem 0rem;
  }

  .mag-explanation {
    margin: 0 0rem 1rem 0rem;
  }
}

.mag-image img {
  width: 85%;
  margin: auto;
  display: block;
}

